# ReDrop

./: .gitignore  Cargo.toml  README.md  config.toml
common/src/: ipc_message.rs
player_app/: Cargo.toml
redrop_app/: Cargo.toml
src/: audio.rs  config.rs  frame_counter.rs  frame_history.rs  ipc_message.rs  main.rs  player_app.rs  preset.rs  redrop_app.rs  renderer.rs
src/common/: Cargo.toml
src/common/src/: audio.rs  config.rs  lib.rs  preset.rs
src/player/: Cargo.toml
src/player/src/: ipc.rs  ipc_client.rs  main.rs  main_ui.rs
src/redrop/: Cargo.toml
src/redrop/src/: config_view.rs  ipc_server.rs  main.rs  main_ui.rs  presets_ui.rs
src/renderer/: audio.rs  config.rs  main.rs
