[package]
name = "projectm_egui"
version = "0.1.0"
edition = "2021"


# [package.metadata.docs.rs]
# all-features = true
# targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
libc = "*"
projectm = "2.0.1-alpha"
egui = "0.27.2"
eframe = { version = "0.27.2", default-features = false, features = ["accesskit", "default_fonts", "glow"] }
log = "0.4"

# You only need serde if you want app persistence:
# serde = { version = "1", features = ["derive"] }

#ProjectM
# projectm = "1.0.5"
# projectm = { git = "https://github.com/projectM-visualizer/projectm-rs.git", tag = "v2.0.1-alpha", features = []}
# glow = "0.13.1"
# gl = "0.14.0"

# native:
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
cpal = "0.15.3"
# sdl2 = "0.34"

# web:
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen-futures = "0.4"


# [profile.release]
# opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2


# [patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }

[[bin]]
name = "redrop"
path = "src/main.rs"

[[bin]]
name = "redrop-renderer"
path = "src/renderer/main.rs"